# LivrariaCursoDjango

./: db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_autores_delete_autor.py  0004_rename_autores_autor.py  0005_alter_autor_options_livro.py  0006_livro_autores.py  0007_compra.py  0008_itenscompra.py  0009_livro_capa.py  0009_livro_imagem.py
core/views/: __init__.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  livro.py  testesIniciais.py
livraria/: settings.py  urls.py
static/: staticfiles.json
