[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
djangorestframework = "^3.14.0"
flake8 = "^5.0.4"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
